--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
   "manifest_version": 2,
   "version": "1.0.0",
   "icons": {
+    "48": "icon_48.png",
     "128": "icon_128.png"
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon_16.png",
     "default_popup": "toolbox.html"
   },
   "permissions": [
