--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Coder's Toolbox",
-  "description": "The best resources for coders.",
+  "description": "A collection of the best resources for coders.",
   "manifest_version": 2,
   "version": "1.0.0",
   "icons": {
